Fix menu item text alignment in some situations

--- a/src/components/ids-menu/ids-menu-item.scss
+++ b/src/components/ids-menu/ids-menu-item.scss
@@ -115,6 +115,14 @@
     }
   }
 
+  &:not(.text-center)
+  &:not(.text-start),
+  &:not(.text-end) {
+    .ids-menu-item-text {
+      text-align: start;
+    }
+  }
+
   &.text-center,
   &.text-start,
   &.text-end {
